@@ -1,14 +1,16 @@
-367256d2cb3da82e6a09cf0ec0f9748e *DESCRIPTION
-a8be9de0cd1a524ad22f714198c7f35f *NAMESPACE
-dd94bbfbae735dd6119a70b2f06e3d55 *R/RcppExports.R
-f60dda8ac5189e4cf461cc8ed58b928e *R/chopthin.R
-f729d0e2bf7bdda19497f4ee27628f0c *inst/CITATION
-c62ae79d6f99d51fd505623fca14effd *inst/NEWS.Rd
-12c9ab4c52bf9f0e198f6f6b3da672a6 *man/chopthin.Rd
-d2ae46610a42cfe7322177f1b522e9c2 *src/RcppExports.cpp
-c02a0faa94ca2dab679bfc2b6b667072 *src/chopthin.cpp
-16837f5719810e2c6de4397ee65c18a7 *src/chopthin_internal.h
+59ef5fa1cc4bbefeb1d73ac9077afdea *DESCRIPTION
+a3f90654fdfc4e39e002d0bac885c407 *NAMESPACE
+7b2ae35e67bbc0dffd4bd93528073b6f *R/RcppExports.R
+b60d66a6990fc6fc875a0a39d9278467 *R/chopthin.R
+d6b90516daa9607a1a6ba42b8422bb91 *inst/CITATION
+038cecefc5f2ea7cfb6f581ed801b10f *inst/NEWS.Rd
+dd1e2ba8c5089210152d33857084489b *man/chopthin.Rd
+a8985233db61fe79c3f506d0ffa1b441 *src/RcppExports.cpp
+67478926c5568d30fa6cbcb05fdd53af *src/chopthin.cpp
+57d7d22eddc02f87b7ef8ed8f0da23b6 *src/chopthin_internal.h
+4e5094274c8c1edb9ce55f971342c76d *src/init.c
 f435957869531e1a8f68a426dd048fd0 *tests/testthat.R
 7cf9ee2df69490de6f83aca659d195ca *tests/testthat/test-chopthin_exact.R
 3a0d54cc049142235c557d2b27685b75 *tests/testthat/test-chopthin_rcauchy.R
+04ba3665ff18e424e06e5d59d3531d3e *tests/testthat/test-numericalproblems.R
 69b6bff411df43d42c33c13f495be6ac *tests/testthat/test-oneverysmallparticle.R
