@@ -1,4 +1,4 @@
-# This file was generated by Rcpp::compileAttributes
+# Generated by using Rcpp::compileAttributes() -> do not edit by hand
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
 #' The Chopthin Resampler
@@ -20,7 +20,7 @@
 #'
 #' @references
 #' A Gandy and F. D-H Lau. The chopthin algorithm for
-#' resampling. arXiv:1502.07532 [stat.CO], 2015
+#' resampling.  IEEE Transactions on Signal Processing, 64(16):4273--4281, 2016
 #'
 #' @examples
 #' chopthin(runif(10),N=10)
@@ -29,6 +29,6 @@
 #' chopthin(runif(10),N=1)
 #' @export
 chopthin <- function(w, N, eta = 5.828427, normalise = TRUE, checks = TRUE) {
-    .Call('chopthin_chopthin', PACKAGE = 'chopthin', w, N, eta, normalise, checks)
+    .Call(`_chopthin_chopthin`, w, N, eta, normalise, checks)
 }
 
