@@ -1,7 +1,10 @@
-bibentry(bibtype = "misc",
+bibentry(bibtype = "article",
          title = "The chopthin algorithm for resampling",
          author = c(person("Axel", "Gandy"),
                     person("F Din-Houn", "Lau")),
-         year = 2015,
-         note = "arXiv:1502.07532 [stat.CO]")
+         year = 2016,
+         journal =  "IEEE Transactions on Signal Processing",
+         volume="64",
+         issue="16",
+         doi="10.1109/TSP.2016.2558166")
 
