@@ -1,4 +1,4 @@
-// This file was generated by Rcpp::compileAttributes
+// Generated by using Rcpp::compileAttributes() -> do not edit by hand
 // Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
 #include <Rcpp.h>
@@ -7,16 +7,16 @@ using namespace Rcpp;
 
 // chopthin
 List chopthin(std::vector<double>& w, int N, double eta, bool normalise, bool checks);
-RcppExport SEXP chopthin_chopthin(SEXP wSEXP, SEXP NSEXP, SEXP etaSEXP, SEXP normaliseSEXP, SEXP checksSEXP) {
+RcppExport SEXP _chopthin_chopthin(SEXP wSEXP, SEXP NSEXP, SEXP etaSEXP, SEXP normaliseSEXP, SEXP checksSEXP) {
 BEGIN_RCPP
-    Rcpp::RObject __result;
-    Rcpp::RNGScope __rngScope;
+    Rcpp::RObject rcpp_result_gen;
+    Rcpp::RNGScope rcpp_rngScope_gen;
     Rcpp::traits::input_parameter< std::vector<double>& >::type w(wSEXP);
     Rcpp::traits::input_parameter< int >::type N(NSEXP);
     Rcpp::traits::input_parameter< double >::type eta(etaSEXP);
     Rcpp::traits::input_parameter< bool >::type normalise(normaliseSEXP);
     Rcpp::traits::input_parameter< bool >::type checks(checksSEXP);
-    __result = Rcpp::wrap(chopthin(w, N, eta, normalise, checks));
-    return __result;
+    rcpp_result_gen = Rcpp::wrap(chopthin(w, N, eta, normalise, checks));
+    return rcpp_result_gen;
 END_RCPP
 }
