@@ -27,7 +27,7 @@ inline double myrunif(){return unif_rand();}
 //'
 //' @references
 //' A Gandy and F. D-H Lau. The chopthin algorithm for
-//' resampling. arXiv:1502.07532 [stat.CO], 2015
+//' resampling.  IEEE Transactions on Signal Processing, 64(16):4273--4281, 2016
 //'
 //' @examples
 //' chopthin(runif(10),N=10)
